--- a/interface/web/src/app/components/shared/media-visualizer/media-visualizer.component.html
+++ b/interface/web/src/app/components/shared/media-visualizer/media-visualizer.component.html
@@ -88,7 +88,7 @@
             (timeupdate)="timeUpdate()">
 
             <source 
-                [src]="media.src" 
+                [src]="media.path" 
                 [type]="media.type">
           </audio>
         
