--- a/interface/web/src/app/components/pages/filter-chain/filter-chain.component.html
+++ b/interface/web/src/app/components/pages/filter-chain/filter-chain.component.html
@@ -68,8 +68,9 @@
         <div class="col">
 
             <app-media-visualizer
-                *ngFor="let mediaTest of testMedia"
+                *ngFor="let mediaTest of testMedia; let i=index"
                 [media]="mediaTest"
+                (delete)="deleteMediaTest(i)"
             ></app-media-visualizer>
 
             <button class="btn btn-sm btn-block btn-outline-info" (click)="complex()">complex</button>
