En la ratonera ha caido un ratón
ABER, ya jala el pedo este de que se suba a la nube. El cliente le manda la petición al servidor para gestionar (obtener, subir y descargar) los archivos entre el server y el almacenamiento de firebase. La interfaz del modal de archivos ya muestra una lista dinámica entre los tres posibles estados de un archivo (local, firebase, local y firebase) y funciona el botón de subir y descargar. aún falta arreglar algunos bugs como la eliminación de los archivos en la nube, y entre otros. Guenas noches c:

--- a/interface/web/src/app/components/shared/media-visualizer/media-visualizer.component.html
+++ b/interface/web/src/app/components/shared/media-visualizer/media-visualizer.component.html
@@ -11,8 +11,7 @@
 
             <div class="d-flex">
                 <div class="w-75">
-                    <span><b>{{media.path.name}} </b></span>
-                    <span>({{media.path.base}})</span>
+                    <span><b>{{media.filename}} </b></span>
                 </div>
 
                 <div class="btn-group btn-group-toggle hoverOpacity-50-100" data-toggle="buttons">
