--- a/interface/web/src/app/components/shared/storage/file-card/file-card.component.css
+++ b/interface/web/src/app/components/shared/storage/file-card/file-card.component.css
@@ -2,3 +2,10 @@ audio{
     height: 2rem;
     width: 100%;
 }
+
+.icon{
+    margin-left: -5px;
+    vertical-align: middle;
+    margin-right: 3px;
+    font-size: 1.3rem;
+}
