Componente de almacenamiento funcionando!
Ahora puedes gestionar el almacenamiento de archivos localmente, y subir y bajar archivos de firebase storage. Un gran paso para el trabajo colaborativo en el desarrollo de filtros!
Solo falta terminar la función de procesar los filtros y verlos reflejados en la web para terminar la primera build oficial del programa de creación de filtros. "se viene" diría el pavel

--- a/interface/web/src/app/components/shared/storage/file-card/file-card.component.html
+++ b/interface/web/src/app/components/shared/storage/file-card/file-card.component.html
@@ -8,8 +8,8 @@
 
         <span> 
             <i class="material-icons icon">
-                <span *ngIf="file.status == 'firebase-local'">archive</span>
                 <span *ngIf="file.status == 'firebase'">cloud</span>
+                <span *ngIf="file.status == 'firebase-local'">settings_system_daydream</span>
                 <span *ngIf="file.status == 'local'">computer</span>
             </i>
             <b>{{file.filename}}</b>
@@ -26,12 +26,11 @@
     <div
         class="card-body p-2 animated fadeIn"
         [hidden]="!showDetails">
-
         <div class="row">
             <div class="col">
                 <audio controls>
                     <source 
-                        [src]="mediaPath" 
+                        [src]="file | mediaFileSrc"
                         [type]="file.mimetype">
                 </audio>
             </div>
