--- a/interface/web/src/app/components/shared/media-visualizer/media-visualizer.component.css
+++ b/interface/web/src/app/components/shared/media-visualizer/media-visualizer.component.css
@@ -114,3 +114,8 @@ input.timelineBar{
   ::-webkit-scrollbar-thumb:hover {
     background: rgb(0,0,0,0.3); 
   }
+
+
+.output-visualizer{
+  height: 15rem;
+}
