--- a/interface/web/src/app/components/pages/filter-chain/filter-chain.component.html
+++ b/interface/web/src/app/components/pages/filter-chain/filter-chain.component.html
@@ -77,8 +77,6 @@
                 (delete)="deleteMediaTest(i)"
             ></app-media-visualizer>
 
-            <button class="btn btn-sm btn-block btn-outline-info" (click)="complex()">complex</button>
-
         </div>
     </div>
     
@@ -86,9 +84,7 @@
     <div class="row" *ngIf="chain.filterComplexLine">
         <div class="col">
             <h2>Filter Complex</h2>
-            <pre class="overflow-auto w-100">
-{{chain.filterComplexLine | filterComplexPreview}}
-            </pre>
+            <pre class="overflow-auto w-100">{{chain.filterComplexLine | filterComplexPreview}}</pre>
         </div>
     </div>
     <div class="row">
