--- a/interface/web/src/app/components/pages/filters-chain-manager/filter-chain-card/filter-chain-card.component.html
+++ b/interface/web/src/app/components/pages/filters-chain-manager/filter-chain-card/filter-chain-card.component.html
@@ -1,4 +1,4 @@
-<div class="card option" (click)="gotoChain()">
+<div class="card option mb-2" (click)="gotoChain()">
     <!--    
     <div class="card-header">
       {{chain.name}}
